--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4492,7 +4492,6 @@
  TUR_camel_companies_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nReconnaissance: §G+5.0%§!\nHot acclimatization gain factor: §G+10.0%§!\n\nEnables §YCamelry Recon Detachment§!\n§HInfantry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCavalry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCamelry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!"
  TUR_army_of_islam:0 "Army of Islam"
  TUR_army_of_islam_desc:0 "Our empire still stands as the head of all Muslims in the world. As we've just declared a jihad against infidel powers, we can utilize our position and form an army of Muslims by Muslims, for Muslims."
- TUR_army_of_islam_tt:0 "Add §YIslamic Army§! which grants (When at war with a §YMajor Power§!:, Weekly Manpower: §G+150§!, Attack against major countries: §G+15.0%§!, Defense against major countries: §G+15.0%§!).\n"
  #Turkey Navy
  TUR_bahriye_nezareti:0 "Bahriye Nezâreti"
  TUR_bahriye_nezareti_desc:0 "In 1867, the Council of Ministers carried out a number of reforms, including in the environment of the naval forces. It was decided to establish the Ministry of the Navy, Bahriye Nezâreti."
@@ -4946,6 +4945,7 @@
  has_arab_minority:0 "Has £ww1_flag_ARB  §YArab Minority§! present within the state"
  TUR_healing_the_sick_man_tt:0 "Has national spirit §YSick Man of Europe§!"
  TUR_mobilize_the_civilian_population_tt:0 "Modify §YSecond Constitutional Era§! by\n£boost_popularity_texticon  Daily Proto-Fascism Support: §G+0.05§!\n\n"
+ TUR_safeguard_courts_from_mlitary_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+5.00§!\n£war_support_modifiericons_texticon  War Support: §R-7.00%§!\n\n"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
