--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -906,11 +906,6 @@
  TUR_officers_struggle_desc:0 "The politicized army is divided among the warring factions of pashas. The officers are focused on the struggle, destabilizing the situation, which greatly disrupts the organization in the army."
  TUR_officers_struggle_yildiz:0 "Yıldız Teşkilatı Officers"
  TUR_officers_struggle_yildiz_desc:0 "Reactionary officers maintain shaky control of the state, but the opposition of warring factions continues among the army."
- TUR_officers_struggle_harbiyeli_officers:0 "Harbiyeli Officers"
- TUR_officers_struggle_harbiyeli_officers_desc:0 "The Harbiyeli officer faction maintain shaky control of the state, but the opposition of warring factions continues among the army."
- TUR_harbiyeli_officers_tt:0 "[TUR_harbiyeli_officers_tt]"
- TUR_harbiyeli_officers_tt1:0 "\nEffects when at war:\nGets event '§YHarbiyeli Officers Protests War Decisions§!'"
- TUR_harbiyeli_officers_tt2:0 ""
  TUR_army_of_bygone_era:0 "Army of a Bygone Era"
  TUR_army_of_bygone_era_desc:0 "Latest reorganization didn't increase combat effectiveness and reliability of our army. We still use the impractical blue uniform - the legacy of the former glory of the imperial army - but it is extremely risky to wear bright tunic on the battlefield."
  TUR_army_of_a_bygone_era:0 "Army of a Bygone Era"
@@ -968,7 +963,7 @@
  TUR_eased_naval_blockade_desc:0 "Recent grain supports from the central powers have eased the effects of the naval blockade, yet it's still noticable."
  TUR_balkan_pact_initiative:0 "Initiative of the Balkan Entente"
  TUR_islamic_army:0 "Islamic Army"
- TUR_islamic_army_tt:0 "When at war with a §YMajor Power§!: \nWeekly Manpower: §G+150§! \nAttack against major countries: §G+15.0%§! \nDefense against major countries: §G+15.0%§ \n"
+ TUR_islamic_army_tt:0 "When at war with a §YMajor Power§!:\n£manpower_texticonWeekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
  TUR_ottoman_staff:0 "Ottoman Staff"
  TUR_german_military_command:0 "German Military Command"
  TUR_gendarmerie:0 "Ottoman Gendarmerie"
@@ -1017,6 +1012,8 @@
  TUR_local_development:0 "Local Development"
  TUR_local_development_desc:0 "Through our decentralization policies, this state has started its own local development initiative."
  TUR_local_development_tt:0 "§RThis modifier will be removed if the state has a Civilian Factory or a Military Factory§!"
+ TUR_ministry_of_food_tt:0 "When §Yat war§!:\n£out_of_supply_texticon  Non-Combat Out of Supply Penalties: §G-5.0%§!\n£stability_war_texticon  War Penalty Stability Modifier: §G+10.00%§!\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y+0.10%§!\n"
+ TUR_army_popularity_tt:0 "When §Yat war§!:\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y-0.10%§!\n£manpower_texticon  Recruitable Population Factor: §G+5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support (Combat Casualties): §G+0.50%§!\n"
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
