--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -270,7 +270,7 @@
  TUR_pragmatic_reformist_leader:0 "Pragmatic Reformist"
  linchpin_of_infrastructure2:0 "Linchpin of Infrastructure"
  TUR_butcher_2:0 "Kasap Cemâl"
- TUR_civilian_front:0 "Civilian Front"
+ TUR_kucuk_efendi:0 "Küçük Efendi"
  TUR_cautious_reformist:0 "Cautious Reformist"
  TUR_three_pasha_locked_tt:0 "§YA member of the Triumvirate cannot be manually replaced or removed.§!"
  erudite_ideologue:0 "Erudite Ideologue"
