--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1900,6 +1900,8 @@
  LIE_democratic_party:0 "Unabhängig"
  LIE_CSVP_party:0 "CSVP"
  LIE_CSVP_party_long:0 "Christlich-Soziale Volkspartei"
+ LIE_fascism_party:0 "HRRRB"
+ LIE_fascism_party_long:0 "Heiliges Römisches Reich Reformationsbund"
  
  ADR_neutrality_party:0 "Consell General d'Andorra"
  ADR_democratic_party:0 "Consell General d'Andorra"
