--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10466,7 +10466,7 @@ GER_asian_weapon_trading:0 "Asian Weapon Trading"
 GER_asian_weapon_trading_desc:0 ""
 GER_the_east_african_railway_project:0 "The East African Railway Project"
 GER_the_east_african_railway_project_desc:0 ""
-GER_exploit_the_diamond_deposits:0 "Exploit the Diamond Deposits"
+GER_exploit_the_diamond_deposits:0 "Colonial Cooperation With Belgian Companies"
 GER_exploit_the_diamond_deposits_desc:0 ""
 GER_development_of_samoa:0 "Development of Samoa"
 GER_development_of_samoa_desc:0 ""
