reworked blockade mechanic

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4449,7 +4449,7 @@
  TUR_new_weapon_contracts_tt:0 "Modify §YArmy of a Bygone Era§! by\nLicense purchase cost: §G-10%§!\n\nWill be able to take §YPurchase Infantry Equipment§! decision for §Y[FRA.GetAdjective]§! equipment.\nUnlocks decisions to purchase §Y[GER.GetAdjective]§! and §Y[ENG.GetAdjective]§! §Ysupport equipments§!.\nWill be able to take §YPurchase Field Artillery§! decision for §Y[GER.GetAdjective]§! and §Y[AUH.GetAdjective]§! equipment.\nUnlocks decisions to purchase §Y[GER.GetAdjective]§! and §Y[ENG.GetAdjective]§! §Ymotorized transport§!."
  TUR_import_dependency:0 "Import Dependency"
  TUR_import_dependency_desc:0 "In such large amounts of materials imported from foreign powers to our empires, we sure do deserve a special deal for them. Through hosting conferences and signing special contracts, we can get the best deal for ourselves."
- TUR_import_dependency_tt:0 "§YInfantry Equipment§! gained from §YPurchase Infantry Equipment§! decisions will be increased from §Y1500§! to §Y2500§!.\n§YSupport Equipment§! gained from §YPurchase Support Equipment§! decisions will be increased from §Y250§! to §Y350§!.\n§YArtillery Equipment§! gained from §YPurchase Field Artillery§! decisions will be increased from §Y150§! to §Y200§!.\n§YHowitzer Equipment§! gained from §YPurchase Howitzer§! decisions will be increased from §Y100§! to §Y150§!.\n§YMotorized Equipment§! gained from §YPurchase Motorized Transport§! decisions will be increased from §Y175§! to §Y250§!."
+ TUR_import_dependency_tt:0 "§YInfantry Equipment§! gained from §YPurchase Infantry Equipment§! decisions will be increased from §Y750§! to §Y1000§!.\n§YSupport Equipment§! gained from §YPurchase Support Equipment§! decisions will be increased from §Y200§! to §Y250§!.\n§YArtillery Equipment§! gained from §YPurchase Field Artillery§! decisions will be increased from §Y150§! to §Y200§!.\n§YHowitzer Equipment§! gained from §YPurchase Howitzer§! decisions will be increased from §Y80§! to §Y120§!.\n§YMotorized Equipment§! gained from §YPurchase Motorized Transport§! decisions will be increased from §Y150§! to §Y200§!."
  TUR_import_dependency_tt2:0 "§YForeign Armour§! and §YMaterial Designers§! will no longer modify §YOttoman Public Debt Administration§! Consumer Goods Factories factor value.\n"
  TUR_turkish_armor_project:0 "Turkish Armor Project"
  TUR_turkish_armor_project_desc:0 "Our army fell behind her neighbours due to technological improvements over time. But now, we actually have a chance to catch them. We must start our Armor Project to pierce up our enemy!"
@@ -4760,6 +4760,7 @@
  TUR_confiscate_entente_investments_tt:0 "\nIf completed focus §YFrench Investments in Syria§!:"
  TUR_import_german_grain:0 "Import German Grain"
  TUR_import_german_grain_desc:0 "The Entente blockade has been a thorn on our side. Yet luckly, recent advancements on the Ukrainian front by the Germans have eased their own blockade. Perhaps we can also benefit from the Ukrainian grain and ease the blockade put on us."
+ TUR_import_german_grain_tt:0 "Has national spirit §YNaval Blockade§!"
  TUR_has_land_connection_tt:0 "Has §Ydirect land connection§! to §Y[GER.GetName]§! through §Yallied§! countries"
  TUR_retreat_to_aleppo:0 "Retreat to Aleppo"
  TUR_retreat_to_aleppo_desc:0 "Combined with the Grand Arab Revolt, British has been steadily pushing towards Levant. Instead of trying to defend, we must retreat to Aleppo and reorganize our forces."
@@ -4786,9 +4787,10 @@
  TUR_decentralize_the_economy_tt:0 "\nFor now and so often, §Yevery state without any civilian or military factories§! will get a modifier that will increase §Yconstruction speed§! in them."
  TUR_endorse_agricultural_economic_model:0 "Endorse Agricultural Economic Model"
  TUR_endorse_agricultural_economic_model_desc:0 "In contrast to European industrial powerhouses, our empire still predominantly an agrarian state. Instead of disregarding our agrarian base, we can focus and benefit from it."
+ TUR_endorse_agricultural_economic_model_tt:0 "Add §YAgrarian Economy§! which grants:\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-20.0%§!\n£supply_consumption_texticon  Supply Consumption: §G-10.0%§!\n"
  TUR_land_distribution:0 "Land Distribution"
  TUR_land_distribution_desc:0 "Current system of land owners, known as ağas, hard our peasantry and the usage of land. Through distributing these lands to those who're working the soil, we can achieve greater profit."
- TUR_land_distribution_tt:0 "Modify §YAgrarian Economy§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-5.0%§!\n£civ_factory  Max Factories in a State: §G+15%§!\n"
+ TUR_land_distribution_tt:0 "Modify §YAgrarian Economy§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-5.0%§!\n£civ_factory  Max Factories in a State: §G+15%§!\n\n"
  TUR_encourage_private_economic_participation:0 "Encourage Private Economic Participation"
  TUR_encourage_private_economic_participation_desc:0 "Liberalism cannot achieved through foreign investments on its own. We have to let state take a back step in order for individuals to participate in the economy."
  TUR_expand_trade_ports:0 "Expand Trade Ports"
@@ -4807,6 +4809,7 @@
  TUR_transport_anatolian_grain_tt:0 "Unlocks £decision_icon_small  §YUtilize Anatolian Grain§! Decisions, allowing us to improve §YAnatolian Grain§! national spirit as well as preventing the side effects of a possible §Yblockade§!."
  TUR_kickstart_turkish_merchant_class:0 "Kickstart Turkish Merchant Class"
  TUR_kickstart_turkish_merchant_class_desc:0 "Most merchants of our empire are non-muslim groups, while the Turkish participation in the economy remains incomparably low. If we truly want to create a national economy, we have to create a Turkish merhanct class."
+ TUR_kickstart_turkish_merchant_class_tt:0 "Add §YNational Economy§! which grants:\n£construction_speed_texticon  Construction Speed: §G+5.00%§!\n"
  TUR_agricultural_obligation_law:0 "Agricultural Obligation Law"
  TUR_agricultural_obligation_law_desc:0 "Though we need soldiers on the ground, the war is stretching our resources. As large cities are starving, grain supply stays all time low. To solve the scarcity of grain, we'll force those who're not in the army to work on the fields, and increase grain production."
  TUR_forming_national_supply_connections:0 "Forming National Supply Connections"
@@ -4946,6 +4949,8 @@
  TUR_healing_the_sick_man_tt:0 "Has national spirit §YSick Man of Europe§!"
  TUR_mobilize_the_civilian_population_tt:0 "Modify §YSecond Constitutional Era§! by\n£boost_popularity_texticon  Daily Proto-Fascism Support: §G+0.05§!\n\n"
  TUR_safeguard_courts_from_mlitary_tt:0 "Modify §YSecond Constitutional Era§! by\n£stability_texticon  Stability: §G+5.00§!\n£war_support_modifiericons_texticon  War Support: §R-7.00%§!\n\n"
+ TUR_consolidate_military_position_tt:0 "Modify §YSecond Constitutional Era§! by\n£war_support_modifiericons_texticon  War Support: §G+5.00%§!\n£planning_max_texticon  Max planning factor: §G+8.0%§!\n£command_power_texticon  Daily Command Power Gain Multiplier: §G+8%§!\n\n"
+ TUR_promote_young_officers_tt:0 "Modify §YSecond Constitutional Era§! by\n£planning_speed_texticon  Planning Speed: §G+15.0%§!\n\n"
 
  TUR_legacy_of_the_4th_lancers:0 "Legacy of the 4th Lancers"
  TUR_legacy_of_the_4th_lancers_desc:0 "It was the soldiers from the 4th lancers who cried the name of the sultan. Though it was quickly crushed, it's legacy is still renown among sultan and chaliph supporters."
