--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -781,7 +781,7 @@
  TUR_balkan_push_modifier:0 "Balkan Offensive"
  TUR_reorganizing_in_aleppo:0 "Reorganizing in Aleppo"
  TUR_last_stance_in_baghdad:0 "Last Stance in Baghdad"
- TUR_special_organization:0 "Teşkilât-ı Mahsusa"
+ TUR_teskilat_i_mahsusa:0 "Teşkilât-ı Mahsusa"
  TUR_desperate_defence:0 "Desperate Defence"
  TUR_turkic_volunteers:0 "Turkic Conscriptions"
  TUR_turkic_warrior_tradition:0 "Turkic Warrior Tradition"
@@ -958,9 +958,7 @@
  TUR_large_investment_in_the_ottomans_desc:0 "Our investments in [TUR.GetNameDef] is taking a toll in our industry. At least these factories will be eased after our investment is done."
  TUR_naval_blockade:0 "Naval Blockade"
  TUR_naval_blockade_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
- TUR_naval_blockade_tt:0 "§RIf estimated enemies strength ratio of 50% or less compared to our navy, this idea will be removed§!"
- TUR_eased_naval_blockade:0 "Eased Naval Blockade"
- TUR_eased_naval_blockade_desc:0 "Recent grain supports from the central powers have eased the effects of the naval blockade, yet it's still noticable."
+ TUR_naval_blockade_instant_desc:0 "§RIf estimated enemies strength ratio of 50% or less compared to our navy, this idea will be removed§!"
  TUR_balkan_pact_initiative:0 "Initiative of the Balkan Entente"
  TUR_islamic_army:0 "Islamic Army"
  TUR_islamic_army_tt:0 "When at war with a §YMajor Power§!:\n£manpower_texticonWeekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
@@ -969,11 +967,11 @@
  TUR_gendarmerie:0 "Ottoman Gendarmerie"
  TUR_gendarmerie_improved:0 "Ottoman Gendarmerie"
  TUR_is_not_affected_by_minorities:0 "State is not affected by §YMinorities§!"
- TUR_OPDA:0 "£pol_idea Ottoman Public Debt Administration"
+ TUR_OPDA:0 "£pol_idea  Ottoman Public Debt Administration"
  TUR_OPDA_idea:0 "Ottoman Public Debt Administration"
  TUR_OPD_idea:0 "Ottoman Public Debt"
  TUR_OPD_idea_desc:0 "After years of foreign domination of our economy, we were finally able to nationalize the Ottoman Public Debt Administration, effectively regaining financial control over our economy with only foreign debts left to pay."
- TUR_OPDA_foreign_power:0 "£pol_idea Ottoman Public Debt Administration"
+ TUR_OPDA_foreign_power:0 "£pol_idea  Ottoman Public Debt Administration"
  TUR_OPDA_TOOLTIP1:0 "£political_power_cost_texticon  Daily Political Power Cost: §R+0.05§!\n£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-10%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§!\n£civilian_intel_texticon  Civilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
  TUR_OPDA_TOOLTIP2:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-10%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§!\n£civilian_intel_texticon  Civilian intelligence to others: §R+20.0%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
  TUR_OPDA_TOOLTIP3:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.opda_consumer_goods|.1%Y]\n£improve_relations_cost_texticon  Improve relations maintain cost: §G-5%§!\n£traded_goods_texticon  Resources to Market: §Y+20%§![FRA_ottoman_debt][ENG_ottoman_debt][GER_ottoman_debt][BEL_ottoman_debt][HOL_ottoman_debt][ITA_ottoman_debt][AUH_ottoman_debt][RUS_ottoman_debt][USA_ottoman_debt]"
