--- a/localisation/english/ww1_traits_l_english.yml
+++ b/localisation/english/ww1_traits_l_english.yml
@@ -260,8 +260,7 @@
  illegitimate_monarch:0 "Illegitimate Monarch"
  oldschool_kaiser:0 "Last Monarch of the Old School"
  newschool_kaiser:0 "First Monarch of the New School"
- tur_national_hero:0 "National Hero"
- tur_savior_of_the_nation:0 "Savior of the Nation"
+ TUR_national_hero:0 "National Hero"
  TUR_ruthless_revanchist:0 "Ruthless Revanchist"
  TUR_ruthless_revanchist_leader:0 "Empowered Revanchist"
  TUR_butcher:0 "Unforgiving Butcher"
