--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4291,39 +4291,23 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.106.t:0 "Unintended Consequences"
  ottoman.106.d:0 "Our policy of taxation towards Albanians have proven to be quite unpopular. As a result, the population in taxed states have started to organize resistance."
  ottoman.106.a:0 "No one is an exception to taxation."
- ottoman.106.tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n\n"
+ ottoman.106.tt:0 "Modify £ww1_flag_ALB  §YAlbanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+20%§!\n\n"
  ottoman.107.t:0 "Unintended Consequences"
  ottoman.107.d:0 "Albanians have long been desiring independence from our rule. Their resistance movements have already been gaining large traction within the empire. Yet our recent centralization policies have been the last straw. After the enaction of our new policies, Albanian independence leaders have started to organize further resistance activities."
  ottoman.107.a:0 "The fate of Albania lies within those of the Turks"
- ottoman.107.tt:0 "Modify §Y£ww1_flag_ALB  Albanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+30%§!\n\n"
+ ottoman.107.tt:0 "Modify £ww1_flag_ALB  §YAlbanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+30%§!\n\n"
+ ottoman.109.tt:0 "Modify §YFrozen Foreign Assets§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?opda_consumer_goods_frozen_assets_tt|.1%Y][FRA_ottoman_debt_opposite_add][ENG_ottoman_debt_opposite_add][GER_ottoman_debt_opposite_add][BEL_ottoman_debt_opposite_add][HOL_ottoman_debt_opposite_add][ITA_ottoman_debt_opposite_add][AUH_ottoman_debt_opposite_add][RUS_ottoman_debt_opposite_add][USA_ottoman_debt_opposite_add]"
+ ottoman.110.tt:0 "Modify §YFrozen Foreign Assets§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?opda_consumer_goods_frozen_assets_tt2|.1%Y][FRA_ottoman_debt_opposite_remove][ENG_ottoman_debt_opposite_remove][GER_ottoman_debt_opposite_remove][BEL_ottoman_debt_opposite_remove][HOL_ottoman_debt_opposite_remove][ITA_ottoman_debt_opposite_remove][AUH_ottoman_debt_opposite_remove][RUS_ottoman_debt_opposite_remove][USA_ottoman_debt_opposite_remove]"
+ FRA_ottoman_debt_yes_opposite_remove:0 "\n(§Y[FRA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?FRA.opda_consumer_goods|.1%Y]"
+ ENG_ottoman_debt_yes_opposite_remove:0 "\n(§Y[ENG.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?ENG.opda_consumer_goods|.1%Y]"
+ GER_ottoman_debt_yes_opposite_remove:0 "\n(§Y[GER.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?GER.opda_consumer_goods|.1%Y]"
+ BEL_ottoman_debt_yes_opposite_remove:0 "\n(§Y[BEL.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?BEL.opda_consumer_goods|.1%Y]"
+ HOL_ottoman_debt_yes_opposite_remove:0 "\n(§Y[HOL.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?HOL.opda_consumer_goods|.1%Y]"
+ ITA_ottoman_debt_yes_opposite_remove:0 "\n(§Y[ITA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?ITA.opda_consumer_goods|.1%Y]"
+ AUH_ottoman_debt_yes_opposite_remove:0 "\n(§Y[AUH.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?AUH.opda_consumer_goods|.1%Y]"
+ RUS_ottoman_debt_yes_opposite_remove:0 "\n(§Y[RUS.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?RUS.opda_consumer_goods|.1%Y]"
+ USA_ottoman_debt_yes_opposite_remove:0 "\n(§Y[USA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?USA.opda_consumer_goods|.1%Y]"
 
- ottoman.105.t:0 "Ottoman-Russian Subjugation"
- ottoman.105.d:0 "The Ottomans and Russians has been enemies for centuries. But recently, in an effort to join the French faction, [TUR.GetName] has agreed with the Russians to become their subjects. With this agreement, Ottomans became a member of [FRA.GetFactionName] and Russians got access to the Mediterranean."
- ottoman.105.a:0 "This was necessary for the survival of our nation."
- ottoman.105.b:0 "They've played right into our hands."
- ottoman.105.c:0 "Weren't they uhh... enemies?"
- ottoman.106.t:0 "Unintended Consequences"
- ottoman.106.d:0 "The recent changes in the administration and our policies on minorities has caused unrest among the Christian minorities. Fearing that they'll be surpressed under the hars rule of an Islamist government, they started to protest and riot and seek independence from our rule."
- ottoman.106.a:0 "We should've seen that coming."
- TUR_ottoman_armenian_minority_modify_attrition_negative_30:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: Division Attrition: §R+30.00%§!"
- TUR_ottoman_greek_minority_modify_attrition_negative_30:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Division Attrition: §R+30.00%§!"
- TUR_ottoman_south_slavic_minority_modify_attrition_negative_30:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Division Attrition: §R+30.00%§!"
- TUR_ottoman_georgian_minority_modify_attrition_negative_30:0 "Modify §YGeorgians Minority§! as: Division Attrition: §R+30.00%§!"
- TUR_ottoman_romanian_minority_modify_attrition_negative_30:0 "Modify £ww1_flag_ROM §YRomanian Minority§! as: Division Attrition: §R+30.00%§!"
- TUR_ottoman_assyrian_minority_modify_attrition_negative_30:0 "Modify §YAssyrian Minority§! as: Division Attrition: §R+30.00%§!"
- ottoman.107.t:0 "Alliance for Karategin"
- ottoman.107.d:0 "As the [TUR.GetName] now advancing in the region, they need an ally to protect their newly acquired territories. Lucky to us, they're willing to give up [742.GetName] to form an alliance with us."
- ottoman.107.a:0 "What an opportunity."
- ottoman.107.b:0 "We might better pass."
- ottoman.108.t:0 "[TUR.GetAdjective]-[AFG.GetAdjective] Alliance"
- ottoman.108.d:0 "The officials in [AFG.GetName] has replied positively to our offer. They've accepted to join our faction in exchange for the transfer of [742.GetName]."
- ottoman.108.a:0 "Our back is secured."
- ottoman.109.t:0 "[AFG.GetName] Rejects our Offer"
- ottoman.109.d:0 "Fearing into being dragged into a conflict, the [AFG.GetAdjective] government has rejected our offer to hand them [742.GetName] in exchange for an alliance."
- ottoman.109.a:0 "Their loss."
- ottoman.110.t:0 "Unintended Consequences"
- ottoman.110.d:0 "The recent changes in the administration and our policies on minorities has caused unrest among the Christian minorities. Fearing that they'll be surpressed under the hars rule of the Millet system, they started to protest and riot and seek the return of their right from our rule."
- ottoman.110.a:0 "We'll deal with it."
  TUR_ottoman_armenian_minority_modify_attrition_negative_15:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: Division Attrition: §R+15.00%§!"
  TUR_ottoman_greek_minority_modify_attrition_negative_15:0 "Modify £ww1_game_rule_flag_GRE §YGreek Minority§! as: Division Attrition: §R+15.00%§!"
  TUR_ottoman_south_slavic_minority_modify_attrition_negative_15:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: Division Attrition: §R+15.00%§!"
