LIE Flavour content UPDATE

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1898,6 +1898,8 @@
  
  LIE_neutrality_party:0 "Haus Liechtenstein"
  LIE_democratic_party:0 "Unabhängig"
+ LIE_U_party:0 "Unabhängig"
+ LIE_U_party_long:0 "Unabhängig"
  LIE_CSVP_party:0 "CSVP"
  LIE_CSVP_party_long:0 "Christlich-Soziale Volkspartei"
  LIE_fascism_party:0 "HRRRB"
