--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3948,6 +3948,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  LIE_johann_ii:0 "Johann II"
  LIE_albert_schadler:0 "Albert Schädler"
  LIE_martin_ritter:0 "Martin Ritter"
+ LIE_karl_aloys_of_liechtenstein:0 "Karl Aloys von und zu Liechtenstein"
 
  #Andorra
  ADR_general_council:0 "General Council"
