--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -14155,12 +14155,39 @@ ww1_greece.246.a:0 "Our failures continue to burden us."
  ww1_liechtenstein.1.t:0 "Beck Putsch"
  ww1_liechtenstein.1.d:0 "Wilhelm Beck, Fritz Walser and Martin Ritter today tabled a motion of no confidence in the Landtag against the incumbent governor, Leopold Freiherr von Imhof. This follows growing calls for a Liechtensteiner head of government (Imhof is Austrian) and his poor management of the various embargoes imposed on Liechtenstein.\n\nAlthough we remained neutral during the Great War, our country suffered severe food shortages as a result of our customs union with Austria-Hungary, causing the Entente to become suspicious of our neutrality and embargo us. As the war progressed, the situation became more desperate as food supplies from Austria-Hungary ceased and the Entente put pressure on Switzerland to embargo us as well. Although Imhof set up emergency commissions throughout the country to manage the procurement of food and raw materials and their distribution to the population, he was accused of inadequacy and incompetence in dealing with the economic crisis. This allowed politicians such as Whilhelm Beck to gain prominence and growing support for his social-liberal ideals. Supported by Martin Ritter and Fritz Walser, he called for an expansion of the welfare state, broader voting rights and a Liechtensteiner head of government.\n\nFollowing heated debates in the Landtag, Imhof agreed to submit his resignation, but asked for a vote of confidence. The princely appointed members of the Landtag unanimously supported Imhof, but this didn't stop the elected members from voting to transfer power from the governor to a provisional executive committee led by Martin Ritter. While this coup directly undermines the 1862 Constitution of Liechtenstein, its leader has no intention of breaking with the monarchy, and his proclamation itself ends with the phrase ''May the Prince and the country live long''."
  ww1_liechtenstein.1.a:0 "The coup is too popular to oppose it."
+ LIE_event_1_option_a:0 "§RThis is the Historical Choice.§!"
  ww1_liechtenstein.1.b:0 "This is unconstitutional, arrest them."
- ww1_liechtenstein.2.t:0 "A Customs Union with Switzerland?"
- ww1_liechtenstein.2.d:0 "The breakdown of the economic bridge with Austria has left the country in a state of economic crisis, and it is urgent that we enter into a customs union with our neighbour, Switzerland."
- ww1_liechtenstein.3.t:0 "A Customs Union with Liechtenstein?"
- ww1_liechtenstein.3.d:0 "Our quiet little neighbour Liechtenstein has sent us a request to enter into a customs union with us."
- ww1_liechtenstein.3.a:0 "How bout no?"
+ LIE_event_1_option_b:0 "§RThis will bring us on a much more Authoritarian Path.§!"
+
+ ww1_liechtenstein.2.t:0 "The End of the Provisional Executive Committee"
+ ww1_liechtenstein.2.d:0 "Following the Beck putsch, it was agreed that a Provisional Executive Committee, led by Martin Ritter, would last a month until a replacement cabinet could be found. Today, the committee has been replaced by Karl Aloys of Liechtenstein, who previously helped mediate the different parties during the coup. He will now be appointed Governor of Liechtenstein by Johann II upon the recommendation of the Landtag of Liechtenstein."
+ ww1_liechtenstein.2.a:0 "He shall bring about great reforms."
+
+ ww1_liechtenstein.3.t:0 "Liechtenstein Wants to Negotiate a Customs Union Between our Two Countries."
+ ww1_liechtenstein.3.d:0 "Today, Governor [LIE.GetLeader] appealed to our government for continued food supplies to begin recovery from the economic devastation brought on by the First World War. He also appealed for negotiations between our two countries for the possible establishment of a customs union, and for us to represent Liechtenstein's interests abroad where they are not already represented."
+ ww1_liechtenstein.3.a:0 "The Federal Council decides to accept."
+ ww1_liechtenstein.3.b:0 "The Federal Council decides to decline."
+ 
+ ww1_liechtenstein.4.t:0 "[SWI.GetName] Agrees."
+ ww1_liechtenstein.4.d:0 "The Federal Council has expressed its willingness to assist us in our economic recovery, and we have already begun negotiations to establish customs unions."
+ ww1_liechtenstein.4.a:0 "Swell!"
+ 
+ ww1_liechtenstein.5.t:0 "[SWI.GetName] Declines."
+ ww1_liechtenstein.5.d:0 "The Federal Council has expressed its unwillingness to assist us in our economic recovery. Our already fragile economy suffers as a result."
+ ww1_liechtenstein.5.a:0 "How are we supposed to recover from this?"
+
+ ww1_liechtenstein.6.t:0 "Freikorps Orchestrates a Coup!"
+ ww1_liechtenstein.6.d:0 "Following the recent failure of the Beck Putsch earlier this month, a group made up of German Freikorps fleeing the recent German Revolution have organised a coup d'état against the Landtag, fearful of Beck launching another democratic coup. The group stormed the Landtag during a session and forced both appointed and elected officials to sign their petition, which proclaims [LIE.GetLeader] to be the legal successor of the Holy Roman Imperial Throne and reclaims all former territories of the Empire. [LIE.GetLeader] has yet to make a statement regarding this coup. If he declines the position, it would effectively render the coup illegitimate and force the Freikorps to step down."
+ ww1_liechtenstein.6.a:0 "Let us become the Third German Reich."
+ ww1_liechtenstein.6.b:0 "[LIE.GetLeader] must speak out against it!"
+
+ ww1_liechtenstein.7.t:0 "Democratic Coup d'État in Liechtenstein."
+ ww1_liechtenstein.7.d:0 "Today, Wilhelm Beck, Fritz Walser, and Martin Ritter moved to oust Governor Leopold Freiherr von Imhof from Liechtenstein's Landtag, citing his Austrian background and mismanagement of embargoes during food shortages. Imhof's response was inadequate, bolstering support for Beck's social-liberal agenda. Even though supported by princely elected members of the Landtag, Imhof offered to resign, leading elected members to transfer power to Martin Ritter's Provisional Executive Committee, challenging the constitution. The Trio affirmed their loyalty to the monarchy, ending their proclamation with ''May the Prince and the country live long.''"
+ ww1_liechtenstein.7.a:0 "Liechten-what?"
+
+ ww1_liechtenstein.8.t:0 "The Holy Roman Empire Sucessor State Proclaimed."
+ ww1_liechtenstein.8.d:0 "In the wake of the failed Beck Putsch earlier this month, a faction of German Freikorps, fleeing the aftermath of the German Revolution, has orchestrated a coup d'état against Liechtenstein's Landtag. Fearful of Wilhelm Beck launching another democratic takeover, the Freikorps stormed the Landtag during a session, coercing both appointed and elected officials into signing a petition. The petition declares [LIE.GetLeader] as the legal successor to the Holy Roman Imperial Throne and lays claim to all former territories of the Empire. This bold proclamation has been widely dismissed as illegitimate by most nations. Meanwhile, [LIE.GetLeader] has remained largely silent on his new "imperial" status, with reports suggesting the so-called "Emperor" is quite confused by the entire situation."
+ ww1_liechtenstein.8.a:0 "Preposterous."
 
 #Northwestern Army
 ww1_nwa.1.t: "Formation of Anti-Bolshevik army in the North"
