--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10410,9 +10410,16 @@ POR_pillar_of_democracy_desc:0 ""
 unlocks_national_focus_tt: "§YNational Focus§! becomes §GAvailable§!:"
 
 #Germany Rework
-
-GER_the_chancellors_reforms:0 "The Chancellor's Reforms"
-GER_the_chancellors_reforms_desc:0 ""
+GER_wilhelmine_germany:0 "Wilhelmine Germany"
+GER_wilhelmine_germany_desc:0 ""
+GER_memories_of_eighteenseventyone:0 "Memories of 1871"
+GER_memories_of_eighteenseventyone_desc:0 ""
+GER_freie_volksbühne:0 "Freie Volksbühne"
+GER_freie_volksbühne_desc:0 ""
+GER_enact_rustungswende:0 "Enact Rüstungswende"
+GER_enact_rustungswende:0 ""
+GER_state_munitions:0 "State munitions"
+GER_state_munitions_desc:0 ""
 GER_a_national_census:0 "A National Census"
 GER_a_national_census_desc:0 ""
 GER_a_constitution_for_alsace:0 "A Constitution for Alsace"
