--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -89,3 +89,12 @@ GER_election1:0 "Upcoming Reichstag Election"
 GER_election2:0 "Upcoming Reichstag Election"
 
 GER_reichstag_next_elections_category:0 "Predicted Election Results"
+
+#Economic Actions
+GER_economic_actions:0 "Economic Actions"
+GER_finance_berlin_military_complex:0 "Finance Berlin's Military Complex"
+GER_finance_rhine_military_complex:0 "Finance the Rhine's Military Complex"
+GER_finance_saarland_military_complex:0 "Finance the Saarland's Military Complex"
+
+#Flags
+GER_ww1_state_munitions:0 "Investing in State Munitions"
