--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -3945,7 +3945,8 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  MCO_suffren_reymond:0 "Suffren Reymond"
 
  #Liechtenstein
- LIE_johann_ii:0 "Johann II"
+ LIE_johann_ii:0 "Johann II."
+ LIE_franz_i:0 "Franz I."
  LIE_albert_schadler:0 "Albert Schädler"
  LIE_martin_ritter:0 "Martin Ritter"
  LIE_karl_aloys_of_liechtenstein:0 "Karl Aloys von und zu Liechtenstein"
