Rupprecht von Bayern by certifiedloserr

--- a/localisation/english/ww1_characters_l_english.yml
+++ b/localisation/english/ww1_characters_l_english.yml
@@ -244,7 +244,9 @@
  # BAVARIA
  BAY_luitpold_von_bayern:0 "Luitpold von Bayern"
  BAY_ludwig_von_bayern:0 "Ludwig von Bayern"
- BAY_ludwig_iii:0 "Ludwig III"
+ BAY_ludwig_iii:0 "Ludwig III."
+ BAY_rupprecht_von_bayern:0 "Rupprecht von Bayern"
+ BAY_rupprecht_i:0 "Rupprecht I."
  BAY_eugen_levine:0 "Eugen Leviné"
  BAY_kurt_eisner:0 "Kurt Eisner"
  BAY_franz_ritter_von_epp:0 "Franz Ritter von Epp"
@@ -1340,7 +1342,7 @@ VIN_joost_van_vollenhoven:0 "Joost Van Vollenhoven"
  GER_paul_von_lettowvorbeck:0 "Paul von Lettow-Vorbeck"
  GER_alfred_von_schlieffen:0 "Alfred von Schlieffen"
  GER_albrecht_von_wurttemberg:0 "Albrecht von Wurttemberg"
- GER_rupprecht_von_wittelsbach:0 "Rupprecht von Bayern"
+ GER_rupprecht_i:0 "Rupprecht I. von Bayern"
  GER_colmar_von_der_goltz:0 "Colmar von der Goltz"
  GER_lepold_von_bayern:0 "Lepold von Bayern"
  GER_friedrich_august_iii:0 "Friedrich August III. von Sachsen"
