--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -8148,6 +8148,10 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ww1_bavaria.2.t:0 "Bavarian Constitutional Amendment of 1913"
  ww1_bavaria.2.d:0 "The legislature amended the constitution of Bavaria to include a clause specifying that if a regency for reasons of incapacity had lasted for ten years with no prospect of the king ever being able to reign, the regent could proclaim the end of the regency and assume the crown himself, with such action to be ratified by the legislature. The amendment received broad party support in the Lower Chamber where it was carried by a vote of 122 in favour, and 27 against. In the Senate there were only six votes against the amendment. The next day, Ludwig proclaimed the end of the regency, deposed his cousin and proclaimed his own reign as Ludwig III. The legislature duly ratified this action, and Ludwig took his oath."
  ww1_bavaria.2.a:0 "A definitive step toward a modern constitutional monarchy."
+ ww1_bavaria.3.t:0 "Ludwig III von Bayern Dies!"
+ ww1_bavaria.3.d:0 "He died on a trip to his castle Nádasdy in Sárvár in Hungary."
+ ww1_bavaria.3.a:0 "Long live Rupprecht I!"
+ 
  
  # BULGARIA
  ww1_bulgaria.1.t:0 "Invitation to Join the Central Powers"
