--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1897,13 +1897,13 @@
  MCO_democratic_party:0 "Monégasque Committee"
  
  LIE_neutrality_party:0 "Haus Liechtenstein"
- LIE_democratic_party:0 "Unabhängig"
- LIE_U_party:0 "Unabhängig"
- LIE_U_party_long:0 "Unabhängig"
+ LIE_democratic_party:0 "Liechtensteinischer Landtag"
+ LIE_democratic_party_long:0 "Landtag des Fürstentums Liechtenstein"
  LIE_CSVP_party:0 "CSVP"
  LIE_CSVP_party_long:0 "Christlich-Soziale Volkspartei"
  LIE_fascism_party:0 "HRRRB"
  LIE_fascism_party_long:0 "Heiliges Römisches Reich Reformationsbund"
+ LIE_communism_party:0 "Arbeiterverband"
  
  ADR_neutrality_party:0 "Consell General d'Andorra"
  ADR_democratic_party:0 "Consell General d'Andorra"
