--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4296,7 +4296,16 @@ FRA_french_local_investments_exploitation:0 "Minister of Work Budget Increase"
  ottoman.107.d:0 "Albanians have long been desiring independence from our rule. Their resistance movements have already been gaining large traction within the empire. Yet our recent centralization policies have been the last straw. After the enaction of our new policies, Albanian independence leaders have started to organize further resistance activities."
  ottoman.107.a:0 "The fate of Albania lies within those of the Turks"
  ottoman.107.tt:0 "Modify £ww1_flag_ALB  §YAlbanian Minority§! by\n£political_violence_texticon  Resistance Target: §R+30%§!\n\n"
+ ottoman.108.t:0 "Freezing Foreign Assets"
+ ottoman.108.d:0 "As our empire has embroiled in war, some of the nations that we're indebted to has located in the enemy side. While we can't simply ruling out their debts, we can freeze the assets they hold and block their roles in the debt council for the time being."
+ ottoman.108.a:0 "Such a fortunate opportunity for the time being."
+ ottoman.109.t:0 "Freezing Foreign Assets"
+ ottoman.109.d:0 "As our empire has embroiled in war, some of the nations that we're indebted to has located in the enemy side. While we can't simply ruling out their debts, we can freeze the assets they hold and block their roles in the debt council for the time being."
+ ottoman.109.a:0 "Such a fortunate opportunity for the time being."
  ottoman.109.tt:0 "Modify §YFrozen Foreign Assets§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?opda_consumer_goods_frozen_assets_tt|.1%Y][FRA_ottoman_debt_opposite_add][ENG_ottoman_debt_opposite_add][GER_ottoman_debt_opposite_add][BEL_ottoman_debt_opposite_add][HOL_ottoman_debt_opposite_add][ITA_ottoman_debt_opposite_add][AUH_ottoman_debt_opposite_add][RUS_ottoman_debt_opposite_add][USA_ottoman_debt_opposite_add]"
+ ottoman.110.t:0 "Unfreezing Foreign Assets"
+ ottoman.110.d:0 "As the nation we were at war before that held a sway over our economy and debt has peaced out with us, so we must ublock the assets and their role in the debt council that we previously frozen."
+ ottoman.110.a:0 "It was a temporary measure anyway."
  ottoman.110.tt:0 "Modify §YFrozen Foreign Assets§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: [?opda_consumer_goods_frozen_assets_tt2|.1%Y][FRA_ottoman_debt_opposite_remove][ENG_ottoman_debt_opposite_remove][GER_ottoman_debt_opposite_remove][BEL_ottoman_debt_opposite_remove][HOL_ottoman_debt_opposite_remove][ITA_ottoman_debt_opposite_remove][AUH_ottoman_debt_opposite_remove][RUS_ottoman_debt_opposite_remove][USA_ottoman_debt_opposite_remove]"
  FRA_ottoman_debt_yes_opposite_remove:0 "\n(§Y[FRA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?FRA.opda_consumer_goods|.1%Y]"
  ENG_ottoman_debt_yes_opposite_remove:0 "\n(§Y[ENG.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?ENG.opda_consumer_goods|.1%Y]"
