--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1012,6 +1012,9 @@
  TUR_local_development_tt:0 "§RThis modifier will be removed if the state has a Civilian Factory or a Military Factory§!"
  TUR_ministry_of_food_tt:0 "When §Yat war§!:\n£out_of_supply_texticon  Non-Combat Out of Supply Penalties: §G-5.0%§!\n£stability_war_texticon  War Penalty Stability Modifier: §G+10.00%§!\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y+0.10%§!\n"
  TUR_army_popularity_tt:0 "When §Yat war§!:\n£balance_of_power_texticon  Weekly Balance of Power Change: §Y-0.10%§!\n£manpower_texticon  Recruitable Population Factor: §G+5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support (Combat Casualties): §G+0.50%§!\n"
+ TUR_frozen_foreign_assets:0 "Frozen Foreign Assets"
+ TUR_frozen_foreign_assets_desc:0 "Foreign powers that hold a sway in our debt council is now engaging in war against us. Even as temporary, this is the perfect opportunity to freeze their assets and curtail their control on our economy for the time being."
+ TUR_frozen_foreign_assets_instant_desc:0 "§RWill be removed if we're not at war with any country that we owe debt to§!"
  TUR_frozen_foreign_assets_tt:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?opda_consumer_goods_frozen_assets|.1%Y][FRA_ottoman_debt_opposite][ENG_ottoman_debt_opposite][GER_ottoman_debt_opposite][BEL_ottoman_debt_opposite][HOL_ottoman_debt_opposite][ITA_ottoman_debt_opposite][AUH_ottoman_debt_opposite][RUS_ottoman_debt_opposite][USA_ottoman_debt_opposite]"
  FRA_ottoman_debt_yes_opposite:0 "\n(§Y[FRA.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?FRA.opda_consumer_goods_opposite|.1%Y]"
  ENG_ottoman_debt_yes_opposite:0 "\n(§Y[ENG.GetNameWithFlag]§!) £consumer_goods_texticon  Consumer Goods Factories factor: [?ENG.opda_consumer_goods_opposite|.1%Y]"
