The Reich-Bavaria Railway

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10414,10 +10414,10 @@ GER_wilhelmine_germany:0 "Wilhelmine Germany"
 GER_wilhelmine_germany_desc:0 ""
 GER_memories_of_eighteenseventyone:0 "Memories of 1871"
 GER_memories_of_eighteenseventyone_desc:0 ""
-GER_freie_volksbühne:0 "Freie Volksbühne"
-GER_freie_volksbühne_desc:0 ""
-GER_enact_rustungswende:0 "Enact Rüstungswende"
-GER_enact_rustungswende:0 ""
+GER_freie_volksbuhne:0 "Freie Volksbuhne"
+GER_freie_volksbuhne_desc:0 ""
+GER_enact_rustungswende:0 "Enact Rustungswende"
+GER_enact_rustungswende_desc:0 ""
 GER_state_munitions:0 "State munitions"
 GER_state_munitions_desc:0 ""
 GER_a_national_census:0 "A National Census"
