--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -17,6 +17,8 @@ GER_idea_rising_unions:0 "Rising Unions"
 GER_idea_rising_unions_desc:0 "§RWhilst this idea is active, major strikes will continue to occur§!"
 GER_rapid_urbanisation:0 "Rapid Urbanisation"
 GER_rapid_urbanisation_desc:0 ""
+GER_rapid_urbanisation_2:0 "Rapid Urbanisation"
+GER_rapid_urbanisation_2_desc:0 ""
 
 #Characters
 GER_ernst_von_heydbrand:0 "Ernst von Heydbrand"
@@ -101,3 +103,7 @@ GER_ww1_state_munitions:0 "Investing in State Munitions"
 
 #Tooltips
 ww1_germanytooltip1:0 "If Belgium accepts our proposal we can expect the profit to benefit our economy as a whole"
+
+#Dynamic Modifiers
+GER_agricultural_incentives:0 "Agricultural Incentives"
+GER_new_major_railway_connection:0 "New Major Railway Connection"
