--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -486,7 +486,7 @@
 
  FRA_PCF:0 "PCF"
  FRA_PCF_long:0 "Parti Communiste Français"
-
+ FRA_CNI:0 "Comités Napoléoniens Impérialistes"
  VIN_empire_fascist:0 "Greater Ming State"
  VIN_empire_fascist_long:0 "Greater Ming State"
 
