--- a/localisation/english/ww1_game_rules_l_english.yml
+++ b/localisation/english/ww1_game_rules_l_english.yml
@@ -305,6 +305,9 @@ FRENCH_EARLY_DEFEAT_DESC:0 "French and German Ais will act differently, favoring
  RULE_OPTION_DEMOCRATIC_RIGHT:0 "Democratic - §2Right§!"
  RULE_OPTION_DEMOCRATIC_RIGHT_FRA_AI_DESC:0 "Jacques Piou and Alexandre Ribot will join forces and unite the right-wing parties in France by going down the relevant path in the national focus tree."
 
+ RULE_OPTION_DEMOCRATIC_RIGHT_NAPOLEON:0 "§2Right§! (then if victor) §gBonapartist§!"
+ RULE_OPTION_DEMOCRATIC_RIGHT_NAPOLEON_FRA_AI_DESC:0 "If France won the great war, Napoléon will become prime minister and restore the empire by going down the relevant path in the national focus tree."
+
  #Italy
  RULE_OPTION_HISTORICAL_ITA_AI_DESC:0 "The Italian AI will attempt to follow the historical chain of events as much as possible."
  RULE_OPTION_CP_ITA_AI_DESC:0 "The Italian AI will attempt to join the Central Powers by going down the relevant path in the national focus tree."
