--- a/localisation/english/ww1_parliament_gui_l_english.yml
+++ b/localisation/english/ww1_parliament_gui_l_english.yml
@@ -20,6 +20,11 @@
 
  FRA_parliament_allied:0 "§G(Allied)§!"
 
+ conservatives_allied:0 "§3Conservatives§! Allied"
+ popular_liberal_action_allied:0 "§gMonarchists and Imperialists§! Allied"
+ republicain_federation_allied:0 "§2Republican Right§! Allied"
+ nationalists_allied:0 "§LNationalists§! Allied"
+
   party_1_text:0 "§RSFIO§!"
   
   party_1_text_desc:0 "§LFounded in 1905 by popular figures like §YJean Jaurès§!, §YJules Guesde§! and §YLéon Blum§!, the French section of the Workers' Internation is a revolutionary socialist party. Often focused on symbolic actions, the supporters of the §RSFIO§! are made up of §RSoreliens§!, §RGuesdiens§! and other "types" of radical left-wing activists.\n\nThe §RSFIO§! is certainly the least stable group in the parliament, the socialism idea they represent being a "mille-feuille" of different ideologies of the workers' struggle, from anarchism to syndicalism.§!"
@@ -43,10 +48,15 @@
   party_7_text_desc:0 "§LBringing together fierce conservative political figures, this movement supports the state religion and discreet support for §gmonarchists§! and brings together many right-wing radical opportunists.\n\nFar from being an official party, it is little more than the remains of the republican right of the §2third French empire§.§!"
   party_8_text:0 "§0Independent republicans§!"
   party_8_text_desc:0 "§LMore of a §Y“state of affairs”§! than a party, the §0independents republican§! concentrate elected officials who did not wish to join the monarchists or the §2republican federation§!.\n\nThis bleak force has no real political future as an entity and is only a form of passage for politicians transitioning from one ideology to another.§!"
+
   party_9_text:0 "§gPopular Liberal Action§!"
   party_9_text_desc:0 "§LThe liberal monarchist party, in constant war with its political rival §g"Action Française"§!. The group was founded in 1901 by §YJacques Piou§! and §YAlbert de Mun§! under the leadership of §YPope Leo XIII§!. \n\nUnfortunately, the party lost the support of the Pope since 1908 to French action, causing a slow decline in its popularity.§!"
   party_AF_text:0 "§gAction Française§!"
   party_AF_text_desc:0 "§LUnion of §g"Action Française"§! with §g"Popular Liberal Action"§!, this group concentrates most of the monarchists aiming at the restoration of a §2kingdom of France§!.\n\nFounded under the blessing of §YPope Pius X§! following the §Yparliamentary elections of 1910§!, it is represented by popular figures such as §YAlbert de Mun§! or §YMaurice Pujo§!.§!"
+  party_CNI_text:0 "§gComités Napoléoniens Impérialistes§!"
+  party_CNI_text_desc:0 "§LUnion of the majority of restorationist deputies following the Great War, §gThe Napoleonic Imperialist Committees§! are a unified §gBonapartist§! group, organizing in the same bloc §gPopular Liberal Action§!, §gAction Française§! and §gAppel du Peuple§!.\n\nSupported by important figures like §YLéon Daudet§! and §YNapoléon§!, the party established itself as the principle entity of the radical right.§!"
+
+
   party_10_text:0 "§LNationalists§!"
   party_10_text_desc:0 "§LA merge of the §gLeague of the French Homeland§! and the §gLeague of Patriots§!, this informal coalition is profoundly §ganti-Dreyfusard§! and anti-left cartel. Sovereignists and populists, the party supports monarchists and revanchism against Germany.\n\nLed by §YGodefroy de Cavaignac§!, the party definitively anchored itself as a complement to the nationalist policies of the §gProudhon circle§!.§!"
   party_11_text:0 "§WVacant§!"
